--- a/web/src/index.css
+++ b/web/src/index.css
@@ -14,16 +14,27 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --primary: #242424;
-  --bg: #ddeeff;
+  --primary: #222;
+  --secondary: #444;
+  --background: #eee;
+  --background-secondary: #ccc;
+  --border: #aaa;
+  --accent: #0d5;
+  --accent-secondary: #0c3;
+  --danger: #c33;
+
   --semibold: 800;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary: #ddd;
-    --bg: #1e2a38;
-    --bdr: #ccc;
+    --primary: #eee;
+    --secondary: #bbb;
+    --background: #222;
+    --background-secondary: #444;
+    --border: #888;
+    --accent: #0c3;
+    --accent-secondary: #0d5;
   }
 
   html {
@@ -33,13 +44,14 @@
 
 html {
   scroll-behavior: smooth;
-  background-color: var(--bg);
+  background-color: var(--background);
   color: var(--primary);
   font-size: 1rem;
 }
 
 body {
   height: 100vh;
+  overflow: hidden;
 }
 
 #root:has(nav) {
@@ -49,12 +61,33 @@ body {
 
 main {
   flex: 1;
+  overflow-y: auto;
 }
 
 a {
   color: var(--primary);
   text-decoration: inherit;
+  transition: 0.3s ease-in-out;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--accent);
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: var(--accent);
+  transition: 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+button:hover,
+button:focus {
+  background-color: var(--accent-secondary);
+}
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
 }
